--- a/build.xml
+++ b/build.xml
@@ -1,3 +1,36 @@
-<?xml encoding="utf-8" version="1.0" ?>
+<?xml encoding="utf-8" version="1.0"?>
+<project name="Flowent" default="src" basedir=".">
+  <description>
+    Ant build file for the Flowent API project.
+  </description>
+  <!-- Set global properties -->
+  <property name="src" location="src">
+  <property name="build" location="antbuild">
+  <property name="dist" location="dist">
 
+  <target name="init">
+    <!-- Create timestamp -->
+    <tstamp/>
+    <!-- Create build directory for compilation -->
+    <mkdir dir="${build}"/>
+  </target>
 
+  <target name="compile" depends="init"
+      description="Compile java source code">
+    <!-- Compile the Java code from src to build -->
+    <javac srcdir="${src}" destdir="${build}"/>
+  </target>
+
+  <target name="dist" depends="compile">
+    <mkdir dir="${dist}/lib"/>
+    <!-- Compile jar file -->
+    <jar jarfile="${dist}/lib/FlowentBuild-${DSTAMP}.jar" basedir="${build}"/>
+  </target>
+
+  <target name="clean"
+  		description="clean up">
+    <!-- Delete the ${build} and ${dist} directory trees -->
+    <delete dir="${build}"/>
+    <delete dir="${dist}"/>
+  </target>
+</project>
